--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "pi-dogs_client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +7,18 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.24.0",
-    "react": "^17.0.1",
+    "dom": "^0.0.3",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.6",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
+    "router": "^1.3.5",
+    "thunk": "^0.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
