--- a/api/package.json
+++ b/api/package.json
@@ -24,9 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5",
-    "uuid": "^8.3.2",
-    "uuidv4": "^6.2.12"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
